# AmbitiousDB

./: CMakeLists.txt  README.md  build.sh
include/ambi/: standard.h
include/ambi/base/: at_code.h  at_compare.h  at_format.h  at_type.h  code.h  compare.h  format.h  type.h
include/ambi/lang/: arr.h  at_arr.h  at_list.h  at_str.h  character.h  iterable.h  object.h  str.h  vec.h
include/ambi/mem/: at_mem.h  at_pool.h  mem.h  pool.h
include/ambi/util/: abstr_collection.h  collection.h  iterator.h
include/base/: code.h  format.h  object.h  standard.h  tag.h  todo.h
include/base/algorithm/: str_utils.h
include/base/collection/: collection.h  iterator.h  list.h  queue.h  set.h
include/base/type/collection/: collection.h  list.h  map.h  queue.h
include/base/type/container/: container.h  list.h  map.h  queue.h  set.h
include/base/wrapper/: arr.h  str.h
include/client/: client.h
include/init/: init.h
include/server/: server.h
src/ambi/: CMakeLists.txt  at_format.cpp  at_mem.cpp  at_pool.cpp  format.cpp  mem.cpp  pool.cpp
src/base/: CMakeLists.txt  object.cpp
src/base/algorithm/: str_utils.cpp
src/base/wrapper/: str.cpp
src/client/: CMakeLists.txt  client.cpp
src/init/: CMakeLists.txt  init.cpp
src/server/: CMakeLists.txt  at_server.cpp  server.cpp
